# ducktype-examples

./: meson.build
gnome-help-ducktype/: a11y-bouncekeys.duck  a11y-braille.duck  a11y-contrast.duck  a11y-dwellclick.duck  a11y-font-size.duck  a11y-mag.duck  a11y-stickykeys.duck  a11y-visualalert.duck  about-this-guide.duck  accounts-disable-service.duck  accounts-provider-not-available.duck  accounts-remove.duck  accounts-which-application.duck  accounts.duck  backup-check.duck  backup-how.duck  backup-restore.duck  backup-thinkabout.duck  bluetooth-connect-device.duck  bluetooth-problem-connecting.duck  bluetooth-send-file.duck  bluetooth-turn-on-off.duck  bluetooth-visibility.duck  clock.duck  color-assignprofiles.duck  color-calibrate-camera.duck  color-calibrationcharacterization.duck  color-calibrationdevices.duck  color-howtoimport.duck  color-missingvcgt.duck  color-notifications.duck  color-testing.duck  color-why-calibrate.duck  color-whyimportant.duck  color.duck  contacts-add-remove.duck  contacts-connect.duck  contacts-link-unlink.duck  disk-benchmark.duck  disk-check.duck  (+92 more)
help/: meson.build
help/C/: a11y-icon.duck  a11y-right-click.duck  a11y-screen-reader.duck  a11y-slowkeys.duck  a11y.duck  accounts-add.duck  accounts-whyadd.duck  backup-frequency.duck  backup-what.duck  backup-where.duck  backup-why.duck  bluetooth-remove-connection.duck  bluetooth.duck  clock-calendar.duck  clock-set.duck  clock-timezone.duck  clock-world.duck  color-calibrate-printer.duck  color-calibrate-scanner.duck  color-calibrate-screen.duck  color-calibrationtargets.duck  color-canshareprofiles.duck  color-gettingprofiles.duck  color-notspecifiededid.duck  color-whatisprofile.duck  color-whatisspace.duck  contacts-edit-details.duck  contacts-search.duck  contacts-setup.duck  contacts.duck  disk-capacity.duck  disk-format.duck  disk-partitions.duck  disk.duck  display-blank.duck  files-copy.duck  files-delete.duck  files-hidden.duck  files-lost.duck  files-open.duck  (+119 more)
help/zh_CN/: zh_CN.po
