gnome = import('gnome')
ducktype = find_program('ducktype', required : true)

duck_sources = [
  'a11y-bouncekeys.duck',
  'a11y-braille.duck',
  'a11y-contrast.duck',
  'a11y.duck',
  'a11y-dwellclick.duck',
  'a11y-font-size.duck',
  'a11y-icon.duck',
  'a11y-mag.duck',
  'a11y-right-click.duck',
  'a11y-screen-reader.duck',
  'a11y-slowkeys.duck',
  'a11y-stickykeys.duck',
  'a11y-visualalert.duck',
  'about-this-guide.duck',
  'accounts-add.duck',
  'accounts-disable-service.duck',
  'accounts.duck',
  'accounts-provider-not-available.duck',
  'accounts-remove.duck',
  'accounts-which-application.duck',
  'accounts-whyadd.duck',
  'backup-check.duck',
  'backup-frequency.duck',
  'backup-how.duck',
  'backup-restore.duck',
  'backup-thinkabout.duck',
  'backup-what.duck',
  'backup-where.duck',
  'backup-why.duck',
  'bluetooth-connect-device.duck',
  'bluetooth.duck',
  'bluetooth-problem-connecting.duck',
  'bluetooth-remove-connection.duck',
  'bluetooth-send-file.duck',
  'bluetooth-turn-on-off.duck',
  'bluetooth-visibility.duck',
  'clock-calendar.duck',
  'clock.duck',
  'clock-set.duck',
  'clock-timezone.duck',
  'clock-world.duck',
  'color-assignprofiles.duck',
  'color-calibrate-camera.duck',
  'color-calibrate-printer.duck',
  'color-calibrate-scanner.duck',
  'color-calibrate-screen.duck',
  'color-calibrationcharacterization.duck',
  'color-calibrationdevices.duck',
  'color-calibrationtargets.duck',
  'color-canshareprofiles.duck',
  'color.duck',
  'color-gettingprofiles.duck',
  'color-howtoimport.duck',
  'color-missingvcgt.duck',
  'color-notifications.duck',
  'color-notspecifiededid.duck',
  'color-testing.duck',
  'color-whatisprofile.duck',
  'color-whatisspace.duck',
  'color-why-calibrate.duck',
  'color-whyimportant.duck',
  'contacts-add-remove.duck',
  'contacts-connect.duck',
  'contacts.duck',
  'contacts-edit-details.duck',
  'contacts-link-unlink.duck',
  'contacts-search.duck',
  'contacts-setup.duck',
  'disk-benchmark.duck',
  'disk-capacity.duck',
  'disk-check.duck',
  'disk.duck',
  'disk-format.duck',
  'disk-partitions.duck',
  'disk-repair.duck',
  'disk-resize.duck',
  'display-blank.duck',
  'display-brightness.duck',
  'display-dual-monitors.duck',
  'files-autorun.duck',
  'files-browse.duck',
  'files-copy.duck',
  'files-delete.duck',
  'files-disc-write.duck',
  'files.duck',
  'files-hidden.duck',
  'files-lost.duck',
  'files-open.duck',
  'files-preview.duck',
  'files-recover.duck',
  'files-removedrive.duck',
  'files-rename.duck',
  'files-search.duck',
  'files-select.duck',
  'files-share.duck',
  'files-show-directory-path.duck',
  'files-sort.duck',
  'files-templates.duck',
  'files-tilde.duck',
  'get-involved.duck',
  'gnome-classic.duck',
  'gnome-version.duck',
  'hardware-auth.duck',
  'hardware-cardreader.duck',
  'hardware-driver.duck',
  'hardware.duck',
  'hardware-problems-graphics.duck',
  'help-irc.duck',
  'help-mailing-list.duck',
  'index.duck',
  'keyboard-cursor-blink.duck',
  'keyboard.duck',
  'keyboard-key-menu.duck',
  'keyboard-key-super.duck',
  'keyboard-layouts.duck',
  'keyboard-nav.duck',
  'keyboard-osk.duck',
  'keyboard-repeat-keys.duck',
  'keyboard-shortcuts-set.duck',
  'look-background.duck',
  'look-display-fuzzy.duck',
  'look-resolution.duck',
  'media.duck',
  'more-help.duck',
  'mouse-doubleclick.duck',
  'mouse.duck',
  'mouse-lefthanded.duck',
  'mouse-middleclick.duck',
  'mouse-mousekeys.duck',
  'mouse-problem-notmoving.duck',
  'mouse-sensitivity.duck',
  'mouse-touchpad-click.duck',
  'mouse-wakeup.duck',
  'music-cantplay-drm.duck',
  'music-player-ipodtransfer.duck',
  'music-player-newipod.duck',
  'nautilus-behavior.duck',
  'nautilus-bookmarks-edit.duck',
  'nautilus-connect.duck',
  'nautilus-display.duck',
  'nautilus-file-properties-basic.duck',
  'nautilus-file-properties-permissions.duck',
  'nautilus-list.duck',
  'nautilus-prefs.duck',
  'nautilus-preview.duck',
  'nautilus-views.duck',
  'net-antivirus.duck',
  'net-browser.duck',
  'net-default-browser.duck',
  'net-default-email.duck',
  'net.duck',
  'net-email.duck',
  'net-email-virus.duck',
  'net-findip.duck',
  'net-firewall-on-off.duck',
  'net-firewall-ports.duck',
  'net-fixed-ip-address.duck',
  'net-general.duck',
  'net-install-flash.duck',
  'net-macaddress.duck',
  'net-manual.duck',
  'net-mobile.duck',
  'net-othersconnect.duck',
  'net-othersedit.duck',
  'net-problem.duck',
  'net-proxy.duck',
  'net-security.duck',
  'net-security-tips.duck',
  'net-slow.duck',
  'net-vpn-connect.duck',
  'net-what-is-ip-address.duck',
  'net-wired-connect.duck',
  'net-wired.duck',
  'net-wireless-adhoc.duck',
  'net-wireless-airplane.duck',
  'net-wireless-connect.duck',
  'net-wireless-disconnecting.duck',
  'net-wireless.duck',
  'net-wireless-find.duck',
  'net-wireless-hidden.duck',
  'net-wireless-noconnection.duck',
  'net-wireless-troubleshooting-device-drivers.duck',
  'net-wireless-troubleshooting.duck',
  'net-wireless-troubleshooting-hardware-check.duck',
  'net-wireless-troubleshooting-hardware-info.duck',
  'net-wireless-troubleshooting-initial-check.duck',
  'net-wireless-wepwpa.duck',
  'power-autobrightness.duck',
  'power-autosuspend.duck',
  'power-batteryestimate.duck',
  'power-batterylife.duck',
  'power-batteryoptimal.duck',
  'power-batteryslow.duck',
  'power-batterywindows.duck',
  'power-closelid.duck',
  'power-constantfan.duck',
  'power.duck',
  'power-hotcomputer.duck',
  'power-lowpower.duck',
  'power-nowireless.duck',
  'power-othercountry.duck',
  'power-status.duck',
  'power-suspend.duck',
  'power-suspendfail.duck',
  'power-whydim.duck',
  'power-willnotturnon.duck',
  'power-wireless.duck',
  'prefs-display.duck',
  'prefs.duck',
  'prefs-language.duck',
  'prefs-sharing.duck',
  'printing-2sided.duck',
  'printing-booklet.duck',
  'printing-booklet-duplex.duck',
  'printing-booklet-singlesided.duck',
  'printing-cancel-job.duck',
  'printing-differentsize.duck',
  'printing.duck',
  'printing-envelopes.duck',
  'printing-inklevel.duck',
  'printing-name-location.duck',
  'printing-order.duck',
  'printing-paperjam.duck',
  'printing-select.duck',
  'printing-setup-default-printer.duck',
  'printing-setup.duck',
  'printing-streaks.duck',
  'printing-to-file.duck',
  'privacy.duck',
  'privacy-history-recent-off.duck',
  'privacy-location.duck',
  'privacy-purge.duck',
  'privacy-screen-lock.duck',
  'screen-shot-record.duck',
  'session-fingerprint.duck',
  'session-formats.duck',
  'session-language.duck',
  'session-screenlocks.duck',
  'sharing-bluetooth.duck',
  'sharing-desktop.duck',
  'sharing-displayname.duck',
  'sharing.duck',
  'sharing-media.duck',
  'sharing-personal.duck',
  'shell-apps-favorites.duck',
  'shell-apps-open.duck',
  'shell-exit.duck',
  'shell-introduction.duck',
  'shell-keyboard-shortcuts.duck',
  'shell-lockscreen.duck',
  'shell-notifications.duck',
  'shell-overview.duck',
  'shell-windows.duck',
  'shell-windows-lost.duck',
  'shell-windows-maximize.duck',
  'shell-windows-states.duck',
  'shell-windows-switching.duck',
  'shell-windows-tiled.duck',
  'shell-workspaces.duck',
  'shell-workspaces-movewindow.duck',
  'shell-workspaces-switch.duck',
  'sound-alert.duck',
  'sound-broken.duck',
  'sound-crackle.duck',
  'sound-nosound.duck',
  'sound-usemic.duck',
  'sound-usespeakers.duck',
  'sound-volume.duck',
  'status-icons.duck',
  'tips.duck',
  'tips-specialchars.duck',
  'translate.duck',
  'user-accounts.duck',
  'user-add.duck',
  'user-admin-change.duck',
  'user-admin-explain.duck',
  'user-admin-problems.duck',
  'user-autologin.duck',
  'user-changepassword.duck',
  'user-changepicture.duck',
  'user-delete.duck',
  'user-goodpassword.duck',
  'video-dvd.duck',
  'video-sending.duck',
  'wacom.duck',
  'wacom-left-handed.duck',
  'wacom-mode.duck',
  'wacom-multi-monitor.duck',
  'wacom-stylus.duck'
]

media_files = [
  'figures/audio-volume-high-symbolic.svg',
  'figures/audio-volume-low-symbolic.svg',
  'figures/audio-volume-medium-symbolic.svg',
  'figures/audio-volume-muted-symbolic.svg',
  'figures/battery-caution-charging-symbolic.svg',
  'figures/battery-caution-symbolic.svg',
  'figures/battery-empty-charging-symbolic.svg',
  'figures/battery-empty-symbolic.svg',
  'figures/battery-full-charged-symbolic.svg',
  'figures/battery-full-charging-symbolic.svg',
  'figures/battery-full-symbolic.svg',
  'figures/battery-good-charging-symbolic.svg',
  'figures/battery-good-symbolic.svg',
  'figures/battery-low-charging-symbolic.svg',
  'figures/battery-low-symbolic.svg',
  'figures/battery-missing-symbolic.svg',
  'figures/bluetooth-active-symbolic.svg',
  'figures/bluetooth-disabled-symbolic.svg',
  'figures/bluetooth-menu.png',
  'figures/color-average.png',
  'figures/color-camera.png',
  'figures/color-display.png',
  'figures/color-printer.png',
  'figures/color-profile-default.png',
  'figures/color-space.png',
  'figures/documents-icon.png',
  'figures/emblem-system.png',
  'figures/emblem-system-symbolic.svg',
  'figures/gnome.png',
  'figures/go-down.png',
  'figures/input-keyboard-symbolic.png',
  'figures/input-methods-switcher.png',
  'figures/keyboard-key-calculator.svg',
  'figures/keyboard-key-computer.svg',
  'figures/keyboard-key-eject.svg',
  'figures/keyboard-key-folder.svg',
  'figures/keyboard-key-home.svg',
  'figures/keyboard-key-mail.svg',
  'figures/keyboard-key-media.svg',
  'figures/keyboard-key-menu.svg',
  'figures/keyboard-key-mute.svg',
  'figures/keyboard-key-next.svg',
  'figures/keyboard-key-pause.svg',
  'figures/keyboard-key-play.svg',
  'figures/keyboard-key-previous.svg',
  'figures/keyboard-key-search.svg',
  'figures/keyboard-key-stop.svg',
  'figures/keyboard-key-voldown.svg',
  'figures/keyboard-key-volup.svg',
  'figures/keyboard-key-world.svg',
  'figures/nautilus-icons.png',
  'figures/network-cellular-3g-symbolic.svg',
  'figures/network-cellular-4g-symbolic.svg',
  'figures/network-cellular-acquiring-symbolic.svg',
  'figures/network-cellular-connected-symbolic.svg',
  'figures/network-cellular-edge-symbolic.svg',
  'figures/network-cellular-gprs-symbolic.svg',
  'figures/network-cellular-signal-excellent-symbolic.svg',
  'figures/network-cellular-signal-good-symbolic.svg',
  'figures/network-cellular-signal-none-symbolic.svg',
  'figures/network-cellular-signal-ok-symbolic.svg',
  'figures/network-cellular-signal-weak-symbolic.svg',
  'figures/network-cellular-umts-symbolic.svg',
  'figures/network-error-symbolic.svg',
  'figures/network-idle-symbolic.svg',
  'figures/network-no-route-symbolic.svg',
  'figures/network-offline-symbolic.svg',
  'figures/network-receive-symbolic.svg',
  'figures/network-transmit-receive-symbolic.svg',
  'figures/network-transmit-symbolic.svg',
  'figures/network-vpn-acquiring-symbolic.svg',
  'figures/network-vpn-symbolic.svg',
  'figures/network-wired-acquiring-symbolic.svg',
  'figures/network-wired-disconnected-symbolic.svg',
  'figures/network-wired-symbolic.svg',
  'figures/network-wireless-acquiring-symbolic.svg',
  'figures/network-wireless-connected-symbolic.svg',
  'figures/network-wireless-encrypted-symbolic.svg',
  'figures/network-wireless-signal-excellent-symbolic.svg',
  'figures/network-wireless-signal-good-symbolic.svg',
  'figures/network-wireless-signal-none-symbolic.svg',
  'figures/network-wireless-signal-ok-symbolic.svg',
  'figures/network-wireless-signal-weak-symbolic.svg',
  'figures/notification-buttons.png',
  'figures/preferences-desktop-accessibility-symbolic.svg',
  'figures/printing-select.png',
  'figures/shell-activities-classic.png',
  'figures/shell-activities.png',
  'figures/shell-appmenu-classic.png',
  'figures/shell-appmenu-shell.png',
  'figures/shell-apps-open.png',
  'figures/shell-appts-classic.png',
  'figures/shell-appts.png',
  'figures/shell-dash.png',
  'figures/shell-exit-classic.png',
  'figures/shell-exit.png',
  'figures/shell-lock.png',
  'figures/shell-notification.png',
  'figures/shell.png',
  'figures/shell-top-bar-classic.png',
  'figures/shell-top-bar.png',
  'figures/shell-window-list-classic.png',
  'figures/shell-workspaces.png',
  'figures/system-run-symbolic.svg',
  'figures/top-bar-icons-classic.png',
  'figures/top-bar-icons.png',
  'figures/universal-access-menu.png',
  'figures/view-more-symbolic.svg',
  'figures/yelp-icon-big.png',
]

page_sources = []
foreach s : duck_sources
  message('convert @0@ ...'.format(s))
  run_command(ducktype, 'C/@0@'.format(s), check: true)
  page_sources += s.replace('.duck', '.page')
endforeach

gnome.yelp('gnome-user-docs',
  page_sources,
  'legal.xml',
  media: media_files,
  symlink_media: true,
)
